syntax = "proto3";
package pb_lobby;
option go_package = "server/pb/pb_lobby"; //生成go时的package
option csharp_namespace = "Pb.Lobby";     //给c#提供的选项
import "enum.proto";

message ReqAuth {
  string Account = 1; //用户账号
  string Token = 2;
}

message RespAuth {
  pb_enum.ErrorCode ErrCode = 1;
  int64 UID = 2;       //用户ID
  string NickName = 3; //昵称
  pb_enum.Sex Sex = 4; //性别
  uint32 Gold = 5;     //金币
  uint32 Diamond = 6;  //钻石
  string Icon = 7;     //头像
}

message ReqLobbyInfo {}

message RespLobbyInfo {
  message LobbyInfo {
    uint32 GameId = 1;   //游戏Id
    string GameName = 2; //游戏名称
    bool IsOpen = 3;     //该游戏是否已开启
  }
  repeated LobbyInfo Infos = 1;
}
